overflow hidden to prevent ghost images causing scroll bars on desktop.

--- a/src/components/Episode/styles.scss
+++ b/src/components/Episode/styles.scss
@@ -117,6 +117,7 @@ $fade-color: rgb(237, 20, 61);
 		padding: 0;
 		padding-left: var(--episode_desktop__padding);
 		padding-right: var(--episode_desktop__padding);
+		overflow: hidden;
 		--episode_desktop__padding: 10em;
 	}
 
